k8s/website-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  labels:
    name: website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    alb.ingress.kubernetes.io/group.name: lazarous-alb
spec:
  tls:
    - hosts:
        - myriadflow.com
      secretName: myriadflow.com-tls-secret
  rules:
    - host: myriadflow.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website-service
                port:
                  number: 3000
